--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.4.4",
     "moment": "^2.24.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
