--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
+    "history": "^4.10.1",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.4.4",
     "moment": "^2.24.0",
@@ -23,6 +26,9 @@
     "react-scripts": "3.4.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.7.5"
   },
