--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "noEmit": true,
     "jsx": "react",
     "noImplicitAny": false,
-    "strict": true
+    "strict": true,
+    "isolatedModules": true
   },
   "include": [
     "src"
